style.css
html, body {
  -ms-overflow-style: none;  // IE 10+
   overflow: -moz-scrollbars-none;  // Firefox
  /*box-sizing: border-box;*/
}
::-webkit-scrollbar{
   display: none;  // Safari and Chrome
}
.follow{
  position: absolute;
  right: 5px;
}
button{
  border: none;
}


#navbarContainer {
  /*position: fixed;*/
  height: 52px;
  width: 100%;
  z-index: 1;
}

.contentBox{
  position: fixed;
  bottom: 0;
  right: 0;
  width: 100%;
  top: 52px;
  margin: 0;
  /*border: 3px solid #73AD21;*/
}

.columns {
  height: 100%;
  margin-top: 0;
  margin-right: -5px;
}
.column{
  padding: 0;
}
#leftCol{
  height: 100%;
}
#leftColMargin{
  margin: 0;
}


.card{
  margin: 5px 5px  5px  5px;
}
.module-section{
  overflow: auto;
  height: 100%;
}
#content{
  overflow: hidden;
  height: 100%;
}
#middleContent{
  /*margin-top: 10px;*/
}
#streamPreview{
  width: 100%;
  margin: 0;
  padding: 0;
}
.recStreamDetail{
  margin: 8px;
  position: inline;
}
.column.is-4{
  height: 100%;
  overflow: auto;
  -ms-overflow-style: none;  // IE 10+
   overflow: -moz-scrollbars-none;  // Firefox
}
.column.is-4::-webkit-scrollbar{
   display: none;  // Safari and Chrome
}
.column.is-6{
  height: 100%;
  overflow: auto;
  -ms-overflow-style: none;  // IE 10+
   overflow: -moz-scrollbars-none;  // Firefox
}
.column.is-6::-webkit-scrollbar{
   display: none;  // Safari and Chrome
}
#streamerTextPost{
  margin: 0;
}
.column.is-2{
  border-right-style: solid;
  border-right-color: #3a2e5b;
}



#desMargins{
  margin-left: 8px;
  margin-bottom: 10px
}
.input::placeholder {
  color: #dad8de;
}
.column.is-6 .card{
  margin-right: 0.75rem;
}
#streamerImage{
  max-width: 40px;
  max-height: 40px;
}
#wrapper{
  max-width:100%;
  padding:50px 75px 50px 45px;
  position:relative;
}
.circletag {
    width: 24px;
    height: 24px;
    background: #E6E7ED;
    -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    background-image: url(no.png);
    background-position:50% 50%;
    margin: 5px 5px;
    background-repeat:no-repeat;
}
#reactionCount{
  margin-bottom: 50px;
}
.cardSide{
  height: 100%;
  display: inline-block;
}
.media-content{
  display: inline-block;
}
.reaction {
  max-width: 24px;
  max-height: 24px;
  border-radius: 50%;
}
#streamRecPreview{
  padding: 0;
  height: 200px;
}
.stream-options{
  overflow: scroll;
  height 100%
}

